完善用户相关接口文档
