# routes/router.go
@@ -17,6 +17,7 @@ func SetupRouter() *gin.Engine {
 		v1.POST("/signUp", apiV1.SignUp)
 		v1.Use(jwt.JWT())
 		{
+			v1.GET("/users/:id", apiV1.GetUserInfo)
 			v1.PUT("/users/:id", apiV1.UpdateUser)
 			v1.GET("/memos", apiV1.ListMemo)
 			v1.PUT("/memos/:id", apiV1.UpdateMemo)
